# templafirm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test_template.tf
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-branch.yaml  docs-deploy.yaml  mdbook.yaml  release-drafter.yaml  release.yaml  templafirm.yaml
docs/: book.toml
docs/source/: conf.py  index.rst  templafirm.core.rst  templafirm.gke.rst  templafirm.gke.templates.rst  templafirm.rst
docs/src/: SUMMARY.md
requirements/: requirements.build.txt  requirements.dev.txt  requirements.doc.txt  requirements.test.txt  requirements.txt
templafirm/: README.md
templafirm/core/: meta_table.py  provider.py  templater.py
templafirm/eai/: eai_provider.py
templafirm/eai/templates/: __init__.py  eai_provider_meta.yaml
templafirm/gke/: gke_provider.py
templafirm/gke/modules/mrdma_node_pool/: main.tf  variables.tf
templafirm/gke/templates/: gke_provider_meta.yaml
templafirm/gke/templates/node_pools/: mrdma_node_pool.jinja2  test_template.tf
test/assets/: test_input_template.jinja2  test_no_input_template.jinja2  test_provider_meta.yaml
test/integration/gke/: test_mrmda_node_pool.py
test/unit/core/: test_provider.py  test_templater.py
test/unit/eai/: test_eai_provider.py
test/unit/gke/: test_gke_provider.py  test_gke_templates.py
