[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "templafirm"
authors = [{name = "Max Wierz", email ="weirzmax@gmail.com"}]
version = "0.0.8"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {build = {file = ["requirements/requirements.build.txt"]}, dev = {file = ["requirements/requirements.dev.txt"]}, docs = {file = ["requirements/requirements.doc.txt"]}, test = {file = ["requirements/requirements.test.txt"]}}
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
# Assume Python 3.10
target-version = "py38"

[tool.ruff.format]
# doc string formatting
docstring-code-format = true
docstring-code-line-length = 60
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "lf"

# No preview style, unstable currently
preview = false

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
]

[tool.ruff.lint]
# sorting of imports
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
show_error_codes = true
implicit_optional = false
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tftest"
ignore_missing_imports = true
